--- a/Arashiyama Bamboo Forest.html
+++ b/Arashiyama Bamboo Forest.html
@@ -40,12 +40,20 @@
             <h4>Arashiyama Bamboo Grove</h4>
             <img src="images/bamboo.jpg" alt="Kiyomizu-dera Temple">
 
-            <p>Arashiyama is the second-most important sightseeing district in Kyoto. It’s filled with temples and shrines, but the star attraction is the famed Arashiyama Bamboo Grove. <br><br>
+            <p>Arashiyama is the second-most important sightseeing district in Kyoto. It’s filled with temples and
+                shrines, but the star attraction is the famed Arashiyama Bamboo Grove. <br><br>
 
-                Arashiyama is in the far west of Kyoto, tucked along the base of the Arashiyama Mountains (meaning “Storm Mountains”). It’s a fair distance from the center of Kyoto: whether you go by train, bus, bicycle or taxi, you’re generally looking at about a 30-minute trip. Still, it’s worth it for the number of great sights here.
+                Arashiyama is in the far west of Kyoto, tucked along the base of the Arashiyama Mountains (meaning
+                “Storm Mountains”). It’s a fair distance from the center of Kyoto: whether you go by train, bus, bicycle
+                or taxi, you’re generally looking at about a 30-minute trip. Still, it’s worth it for the number of
+                great sights here.
                 <br><br>
 
-                From the JR Saga-Arashiyama Station, you may take a bus, which departs approximately every seven minutes. Alternatively, you may walk about 15 minutes to the bamboo grove. Keep in mind that trains departing from the Hankyu Arashiyama Station are not covered by the JR Pass.Next to the station is the red-brick building of Saga Torokko Station, from where you can take the Sagano Scenic Railway. This romantic train passes a gorge offering a lovely view along the Hozu River.
+                From the JR Saga-Arashiyama Station, you may take a bus, which departs approximately every seven
+                minutes. Alternatively, you may walk about 15 minutes to the bamboo grove. Keep in mind that trains
+                departing from the Hankyu Arashiyama Station are not covered by the JR Pass.Next to the station is the
+                red-brick building of Saga Torokko Station, from where you can take the Sagano Scenic Railway. This
+                romantic train passes a gorge offering a lovely view along the Hozu River.
 
 
             </p>
@@ -65,15 +73,24 @@
             <br><br>
             <h4>Videos</h4>
             <div class="videos">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/JpEjSABgaYo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/rSV1TzOlg2Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JpEjSABgaYo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rSV1TzOlg2Y"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
             <br><br>
 
             <h4>Google Map</h4>
             <div class="map">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104562.84901687312!2d135.5193487972656!3d35.01699139999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001abb47c24c983%3A0xece34a99ed7169d2!2sArashiyama%20Bamboo%20Forest!5e0!3m2!1sen!2sjp!4v1673235015231!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104562.84901687312!2d135.5193487972656!3d35.01699139999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001abb47c24c983%3A0xece34a99ed7169d2!2sArashiyama%20Bamboo%20Forest!5e0!3m2!1sen!2sjp!4v1673235015231!5m2!1sen!2sjp"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
