--- a/JR.html
+++ b/JR.html
@@ -40,7 +40,9 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i>JR Kyoto Line</h4>
             <img src="images/jr1.jpg" alt="">
 
-            <p>The JR Kyoto Line is the name given to that part of the Tokaido Main Line that runs between Osaka Station and Kyoto Station. This line is served by Local, Rapid and Special Rapid Services which are all covered by the same standard fare.
+            <p>The JR Kyoto Line is the name given to that part of the Tokaido Main Line that runs between Osaka Station
+                and Kyoto Station. This line is served by Local, Rapid and Special Rapid Services which are all covered
+                by the same standard fare.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -166,14 +168,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
