--- a/Keifuku Line (Randen).html
+++ b/Keifuku Line (Randen).html
@@ -40,7 +40,10 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i> Keifuku Line (Randen)</h4>
             <img src="images/keihan1.jpg" alt="">
 
-            <p>The Keifuku Line (Randen) consists of two branches, the Arashiyama Line and the Kitano Line. Trains run from Arashiyama Station to either Shijō Ōmiya Station or Kitano Hakubaichō Station with a transfer at Katabiranotsuji Station. The Keifuku Kitano Line makes it easy to travel to Ryōan-ji, Kitano Tenmangū Shrine, Kinkaku-ji, and the Arashiyama area..
+            <p>The Keifuku Line (Randen) consists of two branches, the Arashiyama Line and the Kitano Line. Trains run
+                from Arashiyama Station to either Shijō Ōmiya Station or Kitano Hakubaichō Station with a transfer at
+                Katabiranotsuji Station. The Keifuku Kitano Line makes it easy to travel to Ryōan-ji, Kitano Tenmangū
+                Shrine, Kinkaku-ji, and the Arashiyama area..
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -166,14 +169,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
