--- a/Kintetsu.html
+++ b/Kintetsu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,7 +40,9 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i> Kintetsu Kyoto Line </h4>
             <img src="images/keihan1.jpg" alt="">
 
-            <p>The Kintetsu Kyoto Line, runs between Kyoto Station and Yamato-Saidaiji. At Yamato-Saidaiji it connects with the Kintetsu Nara Line which continues on for two stops to Kintetsu Nara Station. There are 26 stations on the Kintetsu Kyoto line proper.
+            <p>The Kintetsu Kyoto Line, runs between Kyoto Station and Yamato-Saidaiji. At Yamato-Saidaiji it connects
+                with the Kintetsu Nara Line which continues on for two stops to Kintetsu Nara Station. There are 26
+                stations on the Kintetsu Kyoto line proper.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -53,7 +54,7 @@
     <section class="onoff">
         <div class="container">
             <div class="heading">
-                <center> Kintetsu Kyoto  LINE STATIONS </center>
+                <center> Kintetsu Kyoto LINE STATIONS </center>
             </div>
             <div class="map">
                 <img src="/images/Keifuku1.jpg" alt="">
@@ -167,14 +168,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
