--- a/The Sagano Scenic Railway.html
+++ b/The Sagano Scenic Railway.html
@@ -40,7 +40,11 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i> The Sagano Scenic Railway </h4>
             <img src="images/sceitic.jpg" alt="">
 
-            <p>The Sagano Scenic Railway (嵯峨野観光鉄道, also known as the Sagano Romantic Train or Sagano Torokko) is a sightseeing train line that runs along the Hozugawa River between Arashiyama and Kameoka. Its charming, old-fashioned trains wind their way through the mountains at a slow pace, taking about 25 minutes to make the seven kilometer journey and giving passengers pleasant views of the scenery as they travel from Arashiyama through the forested ravine and into rural Kameoka.
+            <p>The Sagano Scenic Railway (嵯峨野観光鉄道, also known as the Sagano Romantic Train or Sagano Torokko) is a
+                sightseeing train line that runs along the Hozugawa River between Arashiyama and Kameoka. Its charming,
+                old-fashioned trains wind their way through the mountains at a slow pace, taking about 25 minutes to
+                make the seven kilometer journey and giving passengers pleasant views of the scenery as they travel from
+                Arashiyama through the forested ravine and into rural Kameoka.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -52,7 +56,7 @@
     <section class="onoff">
         <div class="container">
             <div class="heading">
-                <center> The Sagano Scenic Railway  LINE STATIONS </center>
+                <center> The Sagano Scenic Railway LINE STATIONS </center>
             </div>
             <div class="map">
                 <img src="/images/tozai.jpg" alt="">
@@ -166,14 +170,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
