--- a/Tozai.html
+++ b/Tozai.html
@@ -40,7 +40,10 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i> Tōzai Line</h4>
             <img src="images/tozai.jpg" alt="">
 
-            <p>The Tozai Line is one of two subway lines operated by Kyoto Municipal Subway. The line runs east to west through central Kyoto between Rokujizo Station and Uzumasa Tenjingawa Station. “Tozai” literally means “East-West”. At Karasuma Oike Station it connects with the other subway line, the Karasuma Line, which runs north to south, and this gives you access to Kyoto Station.
+            <p>The Tozai Line is one of two subway lines operated by Kyoto Municipal Subway. The line runs east to west
+                through central Kyoto between Rokujizo Station and Uzumasa Tenjingawa Station. “Tozai” literally means
+                “East-West”. At Karasuma Oike Station it connects with the other subway line, the Karasuma Line, which
+                runs north to south, and this gives you access to Kyoto Station.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -166,14 +169,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
