--- a/hyanku.html
+++ b/hyanku.html
@@ -40,7 +40,12 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i>The Hankyu Kyoto Main Line</h4>
             <img src="images/hyanku.jpg" alt="">
 
-            <p>The Hankyu Kyoto Main Line runs between Kyoto-Kawaramachi Station in Kyoto and Osaka-Umeda Station in Osaka. It is run by the private Hankyu Railway company and so is not covered by the Japan Rail Pass. However, it is a useful rail line when traveling east – west through Kyoto city, or traveling from Kyoto city center to Osaka. It is also possible to use this line to visit Arashiyama, if you transfer to the branch line at Katsura Station. To visit Kobe, you would change to the Hankyu Kobe Main Line at Juso Station and get off at Kobe Sannomiya.
+            <p>The Hankyu Kyoto Main Line runs between Kyoto-Kawaramachi Station in Kyoto and Osaka-Umeda Station in
+                Osaka. It is run by the private Hankyu Railway company and so is not covered by the Japan Rail Pass.
+                However, it is a useful rail line when traveling east – west through Kyoto city, or traveling from Kyoto
+                city center to Osaka. It is also possible to use this line to visit Arashiyama, if you transfer to the
+                branch line at Katsura Station. To visit Kobe, you would change to the Hankyu Kobe Main Line at Juso
+                Station and get off at Kobe Sannomiya.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -166,14 +171,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
