--- a/karasuma.html
+++ b/karasuma.html
@@ -40,7 +40,10 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i> The Karasuma Line</h4>
             <img src="images/karasuma.jpg" alt="">
 
-            <p>The Karasuma Line is one of two subway lines operated by Kyoto Municipal Subway. The line runs north to south between Kokusaikaikan Station and Takeda Station. It is called the Karasuma Line because for much of the way it runs beneath Karasuma Street. At Karasuma Oike Station it connects with the other subway line, the Tozai Line, which runs east to west.
+            <p>The Karasuma Line is one of two subway lines operated by Kyoto Municipal Subway. The line runs north to
+                south between Kokusaikaikan Station and Takeda Station. It is called the Karasuma Line because for much
+                of the way it runs beneath Karasuma Street. At Karasuma Oike Station it connects with the other subway
+                line, the Tozai Line, which runs east to west.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -166,14 +169,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
