--- a/keihan.html
+++ b/keihan.html
@@ -40,7 +40,11 @@
             <h4><i class="fa fa-train" aria-hidden="true"></i> Keihan Line</h4>
             <img src="images/keihan1.jpg" alt="">
 
-            <p>Keihan Electric Railway is a private company that operates a number of rail lines in the Kyoto, Shiga and Osaka areas. None of these rail lines pass through Kyoto Station, and they are not covered by the Japan Rail Pass. However, they are very convenient when traveling between Kyoto and Osaka, or when traveling between major tourist locations in Kyoto. In this article we will focus on the Keihan Main Line which is the most useful line for visitors to Kyoto.
+            <p>Keihan Electric Railway is a private company that operates a number of rail lines in the Kyoto, Shiga and
+                Osaka areas. None of these rail lines pass through Kyoto Station, and they are not covered by the Japan
+                Rail Pass. However, they are very convenient when traveling between Kyoto and Osaka, or when traveling
+                between major tourist locations in Kyoto. In this article we will focus on the Keihan Main Line which is
+                the most useful line for visitors to Kyoto.
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -166,14 +170,15 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
