--- a/kinkakuji.html
+++ b/kinkakuji.html
@@ -40,12 +40,29 @@
             <h4>Kinkakuji (Golden Pavilion) </h4>
             <img src="images/kinkakuji5jpg" alt="Kiyomizu-dera Temple">
 
-            <p>Kinkaku-ji is located in Kinkakuji-cho, Kita-ku, in the northwester corner of Kyoto. It is a beautiful area, with the mountains Kinugasayama to the west and Hidari Daimonjiyama behind it. The range of mountains running along the northern part of Kyoto is known as Kitayama, but the area around Kinkaku-ji is sometimes referred to as Hokuzan, an alternative pronunciation of the characters used to write Kitayama. This name can be traced back to the Heian period (794-1185), and at that time was used to distinguish the larger area (Kitayama) extending north into Kyoto Prefecture from the smaller (Hokuzan) area close to Kinkaku-ji.
+            <p>Kinkaku-ji is located in Kinkakuji-cho, Kita-ku, in the northwester corner of Kyoto. It is a beautiful
+                area, with the mountains Kinugasayama to the west and Hidari Daimonjiyama behind it. The range of
+                mountains running along the northern part of Kyoto is known as Kitayama, but the area around Kinkaku-ji
+                is sometimes referred to as Hokuzan, an alternative pronunciation of the characters used to write
+                Kitayama. This name can be traced back to the Heian period (794-1185), and at that time was used to
+                distinguish the larger area (Kitayama) extending north into Kyoto Prefecture from the smaller (Hokuzan)
+                area close to Kinkaku-ji.
                 <br><br>
 
-              Its famous Golden Pavilion (Kinkaku)—actually a pagoda made to house the sacred relics of the Buddha—has given this temple the popular name of Kinkaku-ji (“Temple of the Golden Pavilion”), however the official name of this branch temple of the Rinzai-sect Zen temple of Shokoku-ji is Rokuon-ji. The temple was designated as a UNESCO World Heritage Site in 1994.<br><br>
+                Its famous Golden Pavilion (Kinkaku)—actually a pagoda made to house the sacred relics of the Buddha—has
+                given this temple the popular name of Kinkaku-ji (“Temple of the Golden Pavilion”), however the official
+                name of this branch temple of the Rinzai-sect Zen temple of Shokoku-ji is Rokuon-ji. The temple was
+                designated as a UNESCO World Heritage Site in 1994.<br><br>
 
-During the Kamakura period (1185-1333), this land was the site of a villa of the aristocrat Saionji Kintsune, known as Kitayamadai. During the Muromachi period (1392-1573), however, it caught the attention of the third Ashikaga shogun Yoshimitsu (1358-1408), who took over the site from the Saionji family in order to build his own villa, which he called Kitayamadono. This complex, whose gardens and architecture focused around a central Golden Pavilion, was said to evoke paradise on earth and was the destination of such esteemed visitors as Emperor Gokomatsu (r. 1392-1412), father of the Zen priest Ikkyû. The estate also became the center of the so-called “Kitayama culture,” which was central in importing various aspects of Ming-dynasty Chinese culture into Japanese society, thanks to increased trade relations with Japan’s continental neighbor.
+                During the Kamakura period (1185-1333), this land was the site of a villa of the aristocrat Saionji
+                Kintsune, known as Kitayamadai. During the Muromachi period (1392-1573), however, it caught the
+                attention of the third Ashikaga shogun Yoshimitsu (1358-1408), who took over the site from the Saionji
+                family in order to build his own villa, which he called Kitayamadono. This complex, whose gardens and
+                architecture focused around a central Golden Pavilion, was said to evoke paradise on earth and was the
+                destination of such esteemed visitors as Emperor Gokomatsu (r. 1392-1412), father of the Zen priest
+                Ikkyû. The estate also became the center of the so-called “Kitayama culture,” which was central in
+                importing various aspects of Ming-dynasty Chinese culture into Japanese society, thanks to increased
+                trade relations with Japan’s continental neighbor.
             </p>
 
             <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
@@ -63,15 +80,24 @@ During the Kamakura period (1185-1333), this land was the site of a villa of the
             <br><br>
             <h4>Videos</h4>
             <div class="videos">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/IoRbm4FUsjM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/IoRbm4FUsjM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IoRbm4FUsjM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IoRbm4FUsjM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
             <br><br>
 
             <h4>Google Map</h4>
             <div class="map">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.6945755882184!2d135.72666817531643!3d35.03936997280128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001a820c0eb46bd%3A0xee4272b1c22645f!2sKinkaku-ji!5e0!3m2!1sen!2sjp!4v1673236927393!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.6945755882184!2d135.72666817531643!3d35.03936997280128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001a820c0eb46bd%3A0xee4272b1c22645f!2sKinkaku-ji!5e0!3m2!1sen!2sjp!4v1673236927393!5m2!1sen!2sjp"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
