--- a/kyoto-city-bus.html
+++ b/kyoto-city-bus.html
@@ -102,9 +102,9 @@
                     </div>
                 </div>
             </div>
-             <!-- Flat Fare end -->
+            <!-- Flat Fare end -->
             <hr>
-             <!-- Non-Flat Fare start -->
+            <!-- Non-Flat Fare start -->
             <div class="flat-fare">
                 <center> Not-Flat Fare Routes </center>
                 <div class="card">
@@ -140,7 +140,8 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. To determine your fare, check your number and look at the display screen at the front of the bus.
+                        <h1>Step 4. To determine your fare, check your number and look at the display screen at the
+                            front of the bus.
                         </h1>
                     </div>
                     <div>
@@ -149,7 +150,8 @@
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 5. Before getting off, put the money and your number slip into the machine next to the driver's seat to pay your fare.
+                        <h1>Step 5. Before getting off, put the money and your number slip into the machine next to the
+                            driver's seat to pay your fare.
                         </h1>
                     </div>
                     <div>
@@ -166,7 +168,7 @@
                     </div>
                 </div>
             </div>
-             <!-- Flat Fare end -->
+            <!-- Flat Fare end -->
         </div>
     </section>
 
