--- a/nijo castle.html
+++ b/nijo castle.html
@@ -40,14 +40,24 @@
             <h4>Nijō Castle</h4>
             <img src="images/nijo1.jpg" alt="Kiyomizu-dera Temple">
 
-            <p>Nijō Castle (二条城, Nijō-jō) is a flatland castle in Kyoto, Japan. The castle consists of two concentric rings (Kuruwa) of fortifications, the Ninomaru Palace, the ruins of the Honmaru Palace, various support buildings and several gardens. The surface area of the castle is 275,000 square metres (27.5 ha; 68 acres), of which 8,000 square metres (86,000 sq ft) is occupied by buildings.
+            <p>Nijō Castle (二条城, Nijō-jō) is a flatland castle in Kyoto, Japan. The castle consists of two concentric
+                rings (Kuruwa) of fortifications, the Ninomaru Palace, the ruins of the Honmaru Palace, various support
+                buildings and several gardens. The surface area of the castle is 275,000 square metres (27.5 ha; 68
+                acres), of which 8,000 square metres (86,000 sq ft) is occupied by buildings.
                 <br><br>
 
-             Nijo Castle (二条城, Nijōjō) was built in 1603 as the Kyoto residence of Tokugawa Ieyasu, the first shogun of the Edo Period (1603-1867). His grandson Iemitsu completed the castle's palace buildings 23 years later and further expanded the castle by adding a five story castle keep.<br><br>
+                Nijo Castle (二条城, Nijōjō) was built in 1603 as the Kyoto residence of Tokugawa Ieyasu, the first shogun
+                of the Edo Period (1603-1867). His grandson Iemitsu completed the castle's palace buildings 23 years
+                later and further expanded the castle by adding a five story castle keep.<br><br>
 
-After the Tokugawa Shogunate fell in 1867, Nijo Castle was used as an imperial palace for a while before being donated to the city and opened up to the public as a historic site. Its palace buildings are arguably the best surviving examples of castle palace architecture of Japan's feudal era, and the castle was designated a UNESCO world heritage site in 1994.
+                After the Tokugawa Shogunate fell in 1867, Nijo Castle was used as an imperial palace for a while before
+                being donated to the city and opened up to the public as a historic site. Its palace buildings are
+                arguably the best surviving examples of castle palace architecture of Japan's feudal era, and the castle
+                was designated a UNESCO world heritage site in 1994.
 
-Nijo Castle can be divided into three areas: the Honmaru (main circle of defense), the Ninomaru (secondary circle of defense) and some gardens around them. The entire castle grounds and the Honmaru are surrounded by stone walls and moats.
+                Nijo Castle can be divided into three areas: the Honmaru (main circle of defense), the Ninomaru
+                (secondary circle of defense) and some gardens around them. The entire castle grounds and the Honmaru
+                are surrounded by stone walls and moats.
             </p>
 
             <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
@@ -65,15 +75,24 @@ Nijo Castle can be divided into three areas: the Honmaru (main circle of defense
             <br><br>
             <h4>Videos</h4>
             <div class="videos">
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/LGlw0ZRVBic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/xmKQnGBTxyc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LGlw0ZRVBic"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xmKQnGBTxyc"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
             <br><br>
 
             <h4>Google Map</h4>
             <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3267.69937248767!2d135.74345439678953!3d35.0142299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600107d40a2b9b0b%3A0x106b8759906a2f2f!2sNij%C5%8D%20Castle!5e0!3m2!1sen!2sjp!4v1673240997065!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3267.69937248767!2d135.74345439678953!3d35.0142299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600107d40a2b9b0b%3A0x106b8759906a2f2f!2sNij%C5%8D%20Castle!5e0!3m2!1sen!2sjp!4v1673240997065!5m2!1sen!2sjp"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
