--- a/Eizan.html
+++ b/Eizan.html
@@ -41,11 +41,13 @@
             <img src="images/eizan.jpg" alt="">
 
             <p>The Eizan Railway has two lines in “Rakuhoku,” the northern part of Kyoto.
- 
-The starting point is Demachiyanagi Station near Kyoto Imperial Palace and Shimogamo-jinja Shrine.
- 
-From Demachiyanagi Station, trains on both lines head north to Takaragaike Station, where the lines split into two directions. One line goes eastward to Yase-Hieizanguchi Station, and the other line goes westward toward Kibuneguchi and Kurama Stations.
-Tickets＆Fares
+
+                The starting point is Demachiyanagi Station near Kyoto Imperial Palace and Shimogamo-jinja Shrine.
+
+                From Demachiyanagi Station, trains on both lines head north to Takaragaike Station, where the lines
+                split into two directions. One line goes eastward to Yase-Hieizanguchi Station, and the other line goes
+                westward toward Kibuneguchi and Kurama Stations.
+                Tickets＆Fares
                 <br><br>
                 The trains operate from approximately 5:30 to 23:50. The minimum fare is
                 ¥220 for adults and ¥110 for children.
@@ -171,14 +173,15 @@ Tickets＆Fares
                 </div>
                 <div class="card">
                     <div class="detail">
-                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on the ticket vending machine.
+                        <h1>Step 4. If you need any help, you can ask the station staff by pushing the "Call" button on
+                            the ticket vending machine.
                         </h1>
                     </div>
                     <div>
                         <img src="images/karasuma 14.jpg" alt="">
                     </div>
                 </div>
-        </div>
+            </div>
     </section>
 
     <!-- footer section start  -->
