--- a/Ryōan-ji.html
+++ b/Ryōan-ji.html
@@ -40,16 +40,30 @@
             <h4>Ryōan-ji</h4>
             <img src="images/ryon2.jpg" alt="Kiyomizu-dera Temple">
 
-            <p>Ryōan-ji is a Zen temple located in northwest Kyoto, Japan. It belongs to the Myōshin-ji school of the Rinzai branch of Zen Buddhism. The Ryōan-ji garden is considered one of the finest surviving examples of kare-sansui, a refined type of Japanese Zen temple garden design generally featuring distinctive larger rock formations arranged amidst a sweep of smooth pebbles raked into linear patterns that facilitate meditation. The temple and its gardens are listed as one of the Historic Monuments of Ancient Kyoto, and as a UNESCO World Heritage Site.
+            <p>Ryōan-ji is a Zen temple located in northwest Kyoto, Japan. It belongs to the Myōshin-ji school of the
+                Rinzai branch of Zen Buddhism. The Ryōan-ji garden is considered one of the finest surviving examples of
+                kare-sansui, a refined type of Japanese Zen temple garden design generally featuring distinctive larger
+                rock formations arranged amidst a sweep of smooth pebbles raked into linear patterns that facilitate
+                meditation. The temple and its gardens are listed as one of the Historic Monuments of Ancient Kyoto, and
+                as a UNESCO World Heritage Site.
                 <br><br>
 
-           Entering the park, I immediately spotted a monkey scrambling in the tall grass just meters away. I’d not seen this animal anywhere but a zoo. At first, being so close was a bit nerve-wracking, but it was also refreshing to see these creatures free from a glass cage. The active ones would swing from tree branches and run up the mountainside. The hike itself is fairly easy and takes about 30 minutes.<br><br>
+                Entering the park, I immediately spotted a monkey scrambling in the tall grass just meters away. I’d not
+                seen this animal anywhere but a zoo. At first, being so close was a bit nerve-wracking, but it was also
+                refreshing to see these creatures free from a glass cage. The active ones would swing from tree branches
+                and run up the mountainside. The hike itself is fairly easy and takes about 30 minutes.<br><br>
 
-Following the path, at the top is a view of the city, mountains, and river, with a bright blue sky draped over it all on a sunny day. After fawning over the view (Japan really hypes up -- and does not disappoint -- on that “view”), there is a chance to feed the monkeys.
+                Following the path, at the top is a view of the city, mountains, and river, with a bright blue sky
+                draped over it all on a sunny day. After fawning over the view (Japan really hypes up -- and does not
+                disappoint -- on that “view”), there is a chance to feed the monkeys.
 
-They're eager to gobble up apple chunks tourists can buy and offer through the safety of an enclosed area. They grab the food right out of your hand, as they hang on the outside of the caged-in window area.
+                They're eager to gobble up apple chunks tourists can buy and offer through the safety of an enclosed
+                area. They grab the food right out of your hand, as they hang on the outside of the caged-in window
+                area.
 
-A visit will take about 1-2 hours, and visitors can enter from 9 am–4:30 pm. /5 pm. from 15th March to 30 September. During the Autumn and Winter periods, the park is open from 9 am–4 pm, while the Mountaintop is open from 9 am–4:30 pm
+                A visit will take about 1-2 hours, and visitors can enter from 9 am–4:30 pm. /5 pm. from 15th March to
+                30 September. During the Autumn and Winter periods, the park is open from 9 am–4 pm, while the
+                Mountaintop is open from 9 am–4:30 pm
             </p>
 
             <p>Address: <i>1 Chome-294 Kiyomizu, Higashiyama Ward, Kyoto, 605-0862</i></p>
@@ -67,15 +81,24 @@ A visit will take about 1-2 hours, and visitors can enter from 9 am–4:30 pm. /
             <br><br>
             <h4>Videos</h4>
             <div class="videos">
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/lBpDfB4Ngko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/YLyNtuntFl4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/lBpDfB4Ngko"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YLyNtuntFl4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
             <br><br>
 
             <h4>Google Map</h4>
             <div class="map">
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.889496434029!2d135.7156884753161!3d35.03449427280298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001a82a301cbaa7%3A0xe1ab173e46d78542!2zUnnFjWFuLWpp!5e0!3m2!1sen!2sjp!4v1673242222992!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.889496434029!2d135.7156884753161!3d35.03449427280298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001a82a301cbaa7%3A0xe1ab173e46d78542!2zUnnFjWFuLWpp!5e0!3m2!1sen!2sjp!4v1673242222992!5m2!1sen!2sjp"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
